# REST_Birthday

./:  – копія.env  .env  .env.example  main.py  pyproject.toml  test_route_auth.py  test_unit_main.py  test_unit_repository.py
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/: env.py
src/: schemas.py
src/conf/: config.py
src/db/: db.py  models.py
src/repository/: users.py
src/routes/: auth.py  users.py
src/services/: auth.py  email.py
test/: test_unit_repository.py
