[tool.poetry]
name = "rest-birthday"
version = "0.1.0"
description = ""
authors = ["Анатолій Постний <postny1974@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
